# karen-tonoyan

./: .gitignore  .pre-commit-config.yaml  COMMIT_EDITMSG  COMMIT_EDITMSG.txt  COMMIT_EDITMSG1.txt  Cargo.toml  Dockerfile  Dockerfile.prod  INSTRUKCJA.md  New Microsoft Excel Worksheet.xlsx  Opcja-Czas-Rezultat.csv  PACKAGE_CONTENTS.md  README.md  README_ALFA_BRAIN_v41.md  README_COMPLETE_SYSTEM.md  README_OPENAI_PACKAGE.md  Untitled-2.md  Untitled-2.txt  __main__.py  ai_local.py  alfa_cli.py  alfa_complete_system.py  alfa_constitutional_ai.py  alfa_guard.db  alfa_guard.py  alfa_hardlock_py.py  alfa_master.py  alfa_openai_core.py  alfa_optimized_memory.py  alfa_personalization.py  app.py  brain.py  cerber.db  cerber.db-journal  cerber_alfa360_core.py  cliff1.toml  config  config.py  config.toml4.example  config2.py  (+28 more)
