cd C:\Users\ktono\filtry-TONOYANcd C:\Users\ktono\filtry-TONOYAN[package]
name = "alfa_photos_vault"
version = "1.0.0"
edition = "2021"
authors = ["Karen Tonoyan <karen@alfa.dev>"]
description = "ALFA Photos Vault - Military-grade encrypted photo gallery with self-healing AI"
license = "MIT"
repository = "https://github.com/Karen86Tonoyan/ALFA__CORE"

[lib]
name = "alfa_photos_vault"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "alfa-photos"
path = "src/main.rs"

[features]
default = ["android"]
android = ["jni"]
desktop = []
ai = ["ndarray"]

[dependencies]
# Crypto - ALFA Standard
aes-gcm = { version = "0.10", features = ["std"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

# Security
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Image processing
image = "0.25"
img_hash = "4.0"  # Perceptual hashing for duplicates

# Async
tokio = { version = "1.35", features = ["full"] }

# Android JNI
jni = { version = "0.21", optional = true }

# AI/ML (local)
ndarray = { version = "0.15", optional = true }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
parking_lot = "0.12"
walkdir = "2.4"
base64 = "0.21"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
