[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alfa-core"
version = "1.2.0"
description = "ALFA Core - AI-powered automation kernel"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ALFA Team"}
]
keywords = ["ai", "automation", "kernel", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "pre-commit>=3.6",
    "black>=24.0",
]
compression = [
    "zstandard>=0.22",
    "brotli>=1.1",
]
voice = [
    "edge-tts>=6.1",
]
all = [
    "alfa-core[dev,compression,voice]",
]

[project.urls]
Homepage = "https://github.com/alfa-team/alfa-core"
Documentation = "https://alfa-core.readthedocs.io"
Repository = "https://github.com/alfa-team/alfa-core"

[project.scripts]
alfa = "alfa_core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alfa_core*", "modules*", "plugins*"]

# === RUFF (super-fast linter) ===
[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "PL",   # pylint
    "RUF",  # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # function call in default argument
    "S101",   # assert used
    "PLR0913", # too many arguments
    "PLR2004", # magic value
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG001", "PLR2004"]
"**/test_*.py" = ["S101", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["alfa_core", "modules", "plugins"]

# === BLACK ===
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
)/
'''

# === MYPY ===
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# === PYTEST ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# === COVERAGE ===
[tool.coverage.run]
source = ["alfa_core", "modules", "plugins"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
show_missing = true
